# MyMLStudy

./: .gitignore  1.py  11.py  Dockerfile  MLSolution.sln  Numpy.ipynb  README.md  Untitled.ipynb  crawl_keyword_pic.py  crawl_pic_multipage.py  np sum.ipynb  sms.py  二次复判.drawio  删除pycache.bat  未命名绘图.drawio
.ipynb_checkpoints/: Numpy-checkpoint.ipynb  Untitled-checkpoint.ipynb  np sum-checkpoint.ipynb
00datasets/01torchtext/: 01Multi30k.py
00datasets/02MNIST/: Show_mnist.ipynb
00datasets/03造数据/: 01造mask.py
00myseg/: evaluate.py  main.py  test.py  train.py
00myseg/cmodels/: CModelBase.py
00myseg/config/: CCfgBase.py
00myseg/dataset/: CCityScapes.py
00myseg/models/: unet.py
01PyQt/: 01滚动条.py
02DeepLearning/03transformer/: Transformer_Torch.py
02DeepLearning/AI_track/: ctc_loss.py
02DeepLearning/ObjectDetetion/: main.py
02DeepLearning/优化函数/: adadelta.ipynb
03aq/: aq01.py
03aq/aidi_vision/: aidi_vision.py  aidi_vision_py.pyd
03aq_test/: aq01test.py  aq02.py
04HuaWeiTiKu-NiuKe/: HJ1 字符串最后一个单词的长度.py  HJ14 字符串排序.py  HJ16 背包问题.py  HJ24 合唱队.py  HJ25 数据分类处理.py  HJ28 素数伴侣.py  HJ32 密码截取.py  HJ34 图片整理.py
04华为牛客题库/: HJ13 句子逆序.py  HJ16 购物单.py  HJ25 数据分类处理02.py  HJ26 字符串排序.py  HJ29 字符串加解密.py  HJ33 整数与IP地址间的转换.py  HJ4 字符串分隔.py  HJ9 提取不重复的整数.py
05算法/: 01匈牙利算法.py  HJ68 成绩排序.py  HJ98 自动售货系统.py
05算法/02KalmanFilter/: 02KalmanFilter.py
05算法/03leetcode/: 001两数之和.py
05算法/04华为牛客题库/: HJ16 购物单-优化前.py  HJ17 坐标移动.py  HJ18 识别有效的IP地址和掩码并进行分类统计.py  HJ19 简单错误记录.py  HJ2 计算某字符出现次数.py  HJ20 密码验证合格程序.py  HJ21 简单密码.py  HJ22 汽水瓶.py  HJ23 删除字符串中出现次数最少的字符.py  HJ24 合唱队-二分法.py  HJ24 合唱队02.py  HJ25 数据分类处理.py  HJ27 查找兄弟单词.py  HJ28 素数伴侣.py  HJ3 明明的随机数.py  HJ30 字符串合并处理.py  HJ31 单词倒排.py  HJ35 蛇形矩阵.py  HJ36 字符串加密.py  HJ37 统计每个月兔子的总数.py  HJ38 求小球落地5次后所经历的路程和第5次反弹的高度.py  HJ39 判断两个IP是否属于同一子网.py  HJ42 学英语.py  HJ43 迷宫问题.py  HJ44 Sudoku.py  HJ44 Sudoku_my.py  HJ44 Sudoku_提示.py  HJ5 进制转换.py  HJ6 质数因子.py  HJ7 取近似值.py  HJ8 合并表记录.py
05算法/05Sinkhorn-Knopp/: 01sinkhorn_test.py  OT.py  Sinkhorn-Knopp.py  SinkhornKnopp应用实例_分布匹配.py  SinkhornKnopp应用实例_领域自适应.py  SinkhornKnopp应用实例_颜色迁移.py  Sinkhorn_Knopp.py  Sinkhorn_Knopp_test.py  compute_optimal_transport.py
06CUDAStudy/: 新建 文本文档.bat
06CUDAStudy/00CUDAexamplesCMake_Common/: CMakeLists.txt
06CUDAStudy/01CUDAexamples/: 01CUDAexamples.sln
06CUDAStudy/02CUDAexamplesCMake/: CMakeLists.txt
06CUDAStudy/03CUDAexamplesCMake_huiscliu/: CMakeLists.txt
06CUDAStudy/03CUDAexamplesCMake_huiscliu/src/: 04-mem.cu  06-1B-reduction-v1.cu  06-reduction_v1.cu  0601-1B-reduction-v1.cu  07-warp-activemask.cu  07-warp-bcast.cu  main.cpp  reduction_aux.cpp  reduction_aux.h  vec-add.cu
07TensorRTStudy/: 新建 文本文档.bat
07TensorRTStudy/01TRTexample/: CMakeLists.txt
07TensorRTStudy/01TRTexample/ONNXPlugin/: onnxplugin.hpp
07TensorRTStudy/01TRTexample/include/: common.h
07TensorRTStudy/01TRTexample/onnx-tensorrt/: ModelImporter.cpp  onnxplugin.cpp  onnxplugin.hpp
07TensorRTStudy/01TRTexample/python/05onnx-parser/: demo.onnx  gen-onnx.py
07TensorRTStudy/01TRTexample/python/07hello_plugin/: demo.onnx  gen-onnx.py
07TensorRTStudy/01TRTexample/python/08_integrate_easyplugin/: gen-onnx.py
07TensorRTStudy/01TRTexample/python/09int8/: gen-onnx.py
07TensorRTStudy/01TRTexample/python/10-3rd-plugin/: gen-onnx.py
07TensorRTStudy/01TRTexample/python/11full-cnn-classifier/: gen-onnx.py
07TensorRTStudy/01TRTexample/src/: 01FullyConnectedUseAPI.cpp  02hello-inference.cpp  03CNNUseAPI.cpp  05onnx_parser.cpp  07hello-plugin.cpp  08_integrate_easyplugin.cpp  09int8.cpp  10-3rd-plugin.cpp  11full-cnn-classifier.cpp  12-yolov5-detect.cpp  12yolov5-detect.cpp  13yolox-detect.cpp  14retinaface-detect.cpp  15unet.cpp  16chinese-classifer-bert.cpp  20yolov5-obb.cpp  21onnxruntime.cpp  common.cpp  easy-plugin.cu  main.cpp  myselu-plugin.cpp
07TensorRTStudy/01TRTexample/src_tmp/: 17huggingface-ner.cpp  18alphapose.cpp
07TensorRTStudy/02TRTPro_builder/: CMakeLists.txt
07TensorRTStudy/05TRTPro_infer/: CMakeLists.txt
07TensorRTStudy/11TRTPro_resful_http_yolov5/: CMakeLists.txt
07TensorRTStudy/11TRTPro_resful_http_yolov5/src/: main.cpp
07TensorRTStudy/11TRTPro_resful_http_yolov5/src/app_http/: http_server.cpp  http_server.hpp  mongoose.c
08AIUnitsCode/01BN/: 01BN.py  02BN分步.py
09ONNX/: 04change_input.py  05modify_onnx.py  06replace_node.py  07personal.py  add_model.onnx  dynamic_model.onnx  model.onnx  replace_model.onnx  torch.onnx
12CPPopenCV/: Solution.sln
AIAttack/: fgsm_tutorial.ipynb
AI_track/: SPPcode.py  SPPtest.py
MLMath/: 01 sqrt用牛顿法梯度下降法求开方.py
MNIST/: read_mnist.py
MyPythonLearn/: 1.py  listLearn.ipynb  listLearn.py  setBase.ipynb  函数.ipynb  生成器.ipynb  迭代器.ipynb
ObjectDetetion/: README.md  temp.py  卷积梯度.py
Tensorflow/: Base.ipynb  tf_hello.py
coco/: pycocoDemo.py
data/: 01彩色图转灰色图.py  02根据文件名字分文件夹.py  03去除黑边.py  04根据txt复制图片.py  05遍历文件夹复制到同一个文件夹.py  06删除空文件夹.py  07mask2jpg.py  08保存文件名.py  09随机选图.py  09随机选图.spec  10图片截取中间部分.py  11裁剪标注框.py  12LeftBottom补全.py  bmp2jpg.py  down_load_datasets.py  json文件转换.py  pic_move.py  pic_move.spec  text_file_replease.py  text对比.py  txt文件每行去重.py  vidio2pic.py  切分数据集.py  删除重复图片.py  原图_标注文件处理.py  去除黑边.py  合并图片.py  图片添加标注框.py  复制文件.py  数据增强删除.py  文件重命名.py  文件重命名_读取.py  画托盘.py  统计像素点.py  视频转图像.py  遍历文件夹保存文件名.py  阿秋编号转名字.py
matplotlib/: DrewGif.py  GifDemo.htm  GifDemo.py  Untitled.ipynb
matplotlib练习/: plots.py
ml01tkinter/: 03.py  video.py
ml05Python/: 图片相似.py  筛选.py
ml08MachineLearning/: Liner.py
ml11course/: alg0102.py
ml12mmengine_study/: mm01testResNet50.py  mm02testGAN.py  mm03deeplabv3.py
ml99others/: list.py  pymssqlLearn.py
numpy练习/: clip.py  expand_dims.py  transpose.py
openCV练习/: 01图像拼接.py  02.py  04.py  0601.py  06特征拼接.py  07.py  run.sh  vedio.py
python练习/: 01.py  82236457.xml  dict指针.py  xml_tets.py  二维数组排序.py  类参数.py  类继承.py
seaborn练习/: subplots.py
skimage练习/: feature.local_binary_pattern.py
优化函数/: Untitled.ipynb  adadelta.py  momentum.py
利用Python进行数据分析/: appendix_python.ipynb  ch02.ipynb  ch04 NumPy Basic-Arrays and Vectorized Computation.ipynb
数据集练习/: 移动图片.py
(+1097 files in other folders)
